# pak-c-mak-demo-app

./: .gitignore  CMakeLists.txt  README.md  buildrun.sh  cleanbuild.sh
include/: mygenericclass.hpp  myholderclass.hpp
src/: CMakeLists.txt  main.cpp  mygenericclass.cpp  myholderclass.cpp
test/: mygenericclass_test.cpp  myholderclass_test.cpp
